--- a/pair.html
+++ b/pair.html
@@ -149,8 +149,8 @@
             <br>
             <h6>🔢 Enter your number with country code. ROBIN WEB PAIR</h6>
             <div class="input-container">
-              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ Enter your phone number with country code, ROBIN WEB PAIR" name="">
-              <button id="submit">Submit ROBIN</button>
+              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ Enter your phone number with country code, NETHU WEB PAIR" name="">
+              <button id="submit">Submit Nethu</button>
             </div>
             <!-- Add the loading spinner -->
             <div id="loading-spinner">
